--- a/src/layouts/license.tex
+++ b/src/layouts/license.tex
@@ -1,14 +1,12 @@
     \newpage
     \thispagestyle{empty}
 
-    \begin{flushleft}\hbox{\Large{En Defensa del Software Libre}}
-    En Defensa del Software Libre es una revista de teoría sobre Software y Cultura
-    Libres. Se edita en papel y se distribuye gratuita y libremente en formato
-    digital.
+    \begin{flushleft}\hbox{\Large{Nightscout Foundation}}
+    This is open source.
 
     \vfill
-    \copyleft  \the\year -- En Defensa del Software Libre.
-    \url{http://endefensadelsl.org}
+    \copyleft  \the\year -- Nightscout Foundation.
+    \url{http://nightscout.info/}
 
     \end{flushleft}
    \newpage
