--- a/src/layouts/standalone.latex
+++ b/src/layouts/standalone.latex
@@ -131,6 +131,9 @@ $endif$
 $if(verbatim-in-note)$
 \VerbatimFootnotes % allows verbatim text in footnotes
 $endif$
+$if(draft)$
+\usepackage{draftwatermark}
+$endif$
 
 $if(title)$
 \title{$title$$if(subtitle)$\\\vspace{0.5em}{\large $subtitle$}$endif$}
